--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
   "author": "Andrea Dessì <andrealuciano.dessi@gmail.com> (http://stealthefish.com)",
   "license": "MIT",
   "dependencies": {
-    "grunt": "^0.4.5"
-  }
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-less": "^1.1.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-ejs": "^0.3.0",
+    "grunt-execute": "^0.2.2",
+    "load-grunt-tasks": "^3.3.0"
+  },
+  "distPath": "dist"
 }
