--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "onefootball-template",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "The goal of this project is to build a server-side template following the given model",
   "keywords": [],
   "author": "Andrea Dessì <andrealuciano.dessi@gmail.com> (http://stealthefish.com)",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.0.5",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.2",
@@ -13,7 +19,14 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-ejs": "^0.3.0",
     "grunt-execute": "^0.2.2",
-    "load-grunt-tasks": "^3.3.0"
+    "less": "^2.5.3",
+    "load-grunt-tasks": "^3.3.0",
+    "lodash": "^3.10.1",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   },
-  "distPath": "dist"
+  "distPath": "dist",
+  "scripts": {
+    "start": "node ./server/bin/www"
+  }
 }
